--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 sourceCompatibility = 1.5
+targetCompatibility = 1.5
 
 repositories {
     mavenCentral()
