--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 sourceCompatibility = 1.4
+targetCompatibility = 1.4
 
 repositories {
     mavenCentral()
