--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.github.120011676'
-version '1.0.0'
+version '1.1.0'
 
 apply plugin: 'java'
 apply plugin: 'maven'
@@ -22,7 +22,7 @@ task "mkdirs" << {
     sourceSets*.resources.srcDirs*.each { it.mkdirs() }
 }
 
-task source(type: Jar) {
+task sourceJar(type: Jar) {
     classifier = 'sources'
     from sourceSets.main.allSource
 }
@@ -43,13 +43,13 @@ task doc(type: Jar, dependsOn: javadoc) {
     from 'build/docs/javadoc'
 }
 
-task mavenRelease(dependsOn: ['clean', 'doc', 'sources', 'jar']) {
+task mavenRelease(dependsOn: ['clean', 'doc', 'sourceJar', 'jar']) {
 }
 
 artifacts {
     archives jar
     archives doc
-    archives source
+    archives sourceJar
 }
 
 uploadArchives {
